Added SQL schema support